Added basic gameplay logic

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 
 <body>
     <h1 id="title_bar">Truth or Lie | Live or Die</h1>
+    <div id="game">
+        <h2 id="guilt_text" class="stat">Guilt: 100</h2>
+        <img id="game_image" src="./assets/default.png" alt="Game_Image">
+        <h2 id="reputation_text" class="stat">Reputation: 100</h2>
+    </div>
+    <h3 id="scenario_text">Scenario</h3>
+    <div id="choices">
+        <button id="choice_1" class="choice_button">Choice A</button>
+        <button id="choice_2" class="choice_button">Choice B</button>
+    </div>
     <script src="logic.js"></script>
 </body>
 
