--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1 id="title_bar">Truth or Lie | Live or Die</h1>
     <div id="game">
         <h2 id="guilt_text" class="stat">Guilt: 100</h2>
-        <img id="game_image" src="./assets/default.png" alt="Game_Image">
+        <img id="game_image" src="./assets/Intro.png" alt="Game_Image">
         <h2 id="reputation_text" class="stat">Reputation: 100</h2>
     </div>
     <h3 id="scenario_text">Scenario</h3>
